# oxidns

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README_EN.md  build.rs  config.yaml  justfile
.github/workflows/: custom-build.yml  docker.yml  docs-ci.yml  release.yml  rust-ci.yml  webui-ci.yml
ai/: README.md  release-process.md  webui.md
benches/: plugin_local_answers.rs
benchmarks/mosdns_compare/: scenarios.tsv
benchmarks/mosdns_compare/queries/: cache-hotpath-large.txt
crates/proto/: Cargo.toml
crates/proto/src/: message.rs  record.rs  types.rs
crates/ripset/src/: ipset.rs  nftset.rs
crates/ripset/tests/: integration.rs
crates/zoneparser/: Cargo.toml
crates/zoneparser/src/: parser.rs
docs/: release-process.md  sidebars.js
docs/docs/: api.md  api.mdx  cli.md  configuration.md  custom-build.md  custom-build.mdx  dns-codes.md  migrate-from-mosdns.mdx  mikrotik-policy-routing.md  openwrt.mdx  quickstart.md  quickstart.mdx  releases.md  roadmap.md  scenarios.md  webui.md
docs/docs/plugin-reference/: executor.md  executor.mdx  matcher.md  matcher.mdx  overview.md  provider.md  provider.mdx  server.mdx
docs/src/components/: Hero.tsx
packaging/: oxidns.service
scripts/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: api_macros.rs  app.rs  build_info.rs  lib.rs  main.rs  service.rs  upgrade.rs
src/api/: build.rs  control.rs  health.rs  hub.rs  logs.rs  macros.rs  metrics.rs  mod.rs  query.rs  route.rs  server.rs  static_files.rs  tests.rs  upgrade.rs  upstreams.rs  webui_config.rs
src/app/: banner.rs  bootstrap.rs  cli.rs  logging.rs
src/cli/: build_info.rs  check.rs  export_dat.rs  graph.rs  mod.rs  probe.rs  service.rs  upgrade.rs
src/config/: env_expand.rs  mod.rs  types.rs
src/core/: app_controller.rs  error.rs  log_buffer.rs  mod.rs
src/core/rule_matcher/: ip.rs
src/infra/: build_info.rs  clock.rs  control.rs  env.rs  error.rs  mod.rs  service.rs  system.rs  task.rs  upgrade.rs
src/infra/cache/: mod.rs  ttl.rs
src/infra/network/: buffer_pool.rs  deadline.rs  dial.rs  http_client.rs  ip.rs  listen.rs  metrics.rs  mod.rs  outbound.rs  proxy.rs
src/infra/network/resolver/: cache.rs  endpoint.rs  mod.rs  name.rs  query.rs
src/infra/network/tls_config/: mod.rs  server.rs
src/infra/network/transport/: mod.rs  quic_transport.rs  tcp_transport.rs  udp.rs
src/infra/network/upstream/: bootstrap.rs  bootstrap_factory.rs  builder.rs  config.rs  dial.rs  mod.rs  pooled.rs  probe.rs  resolver.rs  tests.rs  traits.rs
src/infra/observability/: log_buffer.rs  logging.rs  metrics.rs  mod.rs
src/network/: http_client.rs  mod.rs  proxy.rs
src/network/tls_config/: client.rs  mod.rs  server.rs
src/network/transport/: mod.rs
src/network/upstream/: bootstrap.rs  builder.rs  config.rs  dial.rs  mod.rs  resolver.rs  tests.rs  utils.rs
src/network/upstream/conn/: doh.rs  h2.rs  h3.rs  mod.rs  quic.rs  request_map.rs  tcp.rs  udp.rs
src/network/upstream/pool/: conn_h2.rs  conn_h3.rs  conn_quic.rs  conn_tcp.rs  mod.rs  pool_pipeline.rs  pool_reuse.rs
src/plugin/: dependency.rs  mod.rs  registry.rs  test_utils.rs
src/plugin/executor/: arbitrary.rs  black_hole.rs  cron.rs  debug_print.rs  download.rs  drop_resp.rs  dual_selector.rs  ecs_handler.rs  fallback.rs  forward.rs  forward_edns0opt.rs  hosts.rs  http_request.rs  ipset.rs  metrics_collector.rs  mod.rs  nftset.rs  query_summary.rs  rdata_json.rs  redirect.rs  reload.rs  reload_provider.rs  reverse_lookup.rs  script.rs  sleep.rs  synthetic_response.rs  template.rs  ttl.rs  upgrade.rs
src/plugin/executor/cache/: api.rs  mod.rs  persistence.rs
src/plugin/executor/forward/: concurrent.rs  config.rs  factory.rs  metrics.rs  mod.rs  selection.rs  single.rs  tests.rs
src/plugin/executor/ip_selector/: config.rs  metrics.rs  mod.rs  policy.rs  probe.rs  tests.rs
src/plugin/executor/learn_domain/: config.rs  executor.rs  mod.rs  tests.rs
src/plugin/executor/query_recorder/: api.rs  backend.rs  capture.rs  mod.rs  model.rs  store.rs  tests.rs
src/plugin/matcher/: any_match.rs  client_ip.rs  cname.rs  env.rs  false_matcher.rs  has_resp.rs  has_wanted_ans.rs  mark.rs  matcher_utils.rs  mod.rs  ptr_ip.rs  qclass.rs  qname.rs  qtype.rs  question.rs  random.rs  rate_limiter.rs  rcode.rs  resp_ip.rs  string_exp.rs  true_matcher.rs
src/plugin/provider/: domain_set.rs  geoip.rs  geosite.rs  ip_set.rs  mod.rs  provider_utils.rs
src/plugin/registry/: catalog.rs  context.rs  runtime.rs  tests.rs
src/plugin/server/: mod.rs  quic.rs  quic_endpoint.rs  tcp.rs  udp.rs
src/plugin/server/http/: mod.rs  (+5 more)
tests/: feature_gating.rs  plugin_integration.rs
tests/testdata/rules/: domain_set_1.txt
webui/: AGENTS.md  package.json  pnpm-lock.yaml
webui/app/(console)/: layout.tsx  page.tsx
webui/components/config/: config-editor-view.tsx  config-history-sheet.tsx  config-sync-status.tsx
webui/components/logs/: log-viewer.tsx
webui/components/plugins/: create-plugin-dialog.tsx  dns-record-detail-dialog.tsx  plugin-card-template.tsx  plugin-config-fields-editor.tsx  plugin-delete-button.tsx  plugin-detail-sheet.tsx  plugin-detail-template.tsx  plugin-ref-editor.tsx  plugin-reference-picker.tsx  plugin-topology-view.tsx  query-record-flow.tsx  sequence-composer.tsx  sortable-plugin-grid.tsx
webui/components/shell/: app-header.tsx  app-sidebar.tsx  connection-required.tsx  restarting-overlay.tsx  upgrade-overlay.tsx
webui/components/standard/: mode-selection.tsx  standard-placeholder-page.tsx
webui/components/ui/: alert-dialog.tsx
webui/hooks/: use-plugin-applied.ts
webui/lib/: auth-store.ts  build-capabilities.ts  config-history.ts  config-identity.ts  metrics.ts  oxidns-api.ts  oxidns-config.ts  oxidns-yaml-monaco.ts  plugin-reference-operations.ts  process-instance.ts  store.ts  update-store.ts  webui-config-header.ts
webui/lib/i18n/: keys.ts
webui/lib/plugin-definitions/: docs.ts  executor.ts  matcher.ts  provider.ts  server.ts  shared.ts
webui/lib/standard-mode/: defaults.ts  generator.ts  query-explainer.ts  schema.ts  selectors.ts  types.ts  validation.ts
(+78 files in other folders)
