[workspace]
members = [
    ".",
    "crates/macros",
    "crates/ripset",
    "crates/proto",
    "crates/zoneparser",
]

[package]
name = "oxidns"
version = "1.1.4"
edition = "2024"
authors = ["Sven Shi <isvenshi@gmail.com>"]
description = "A Rust-powered DNS engine inspired by MosDNS, designed for performance and complete configurability."
repository = "https://github.com/svenshi/oxidns"
license = "GPL-3.0-or-later"
readme = "README_EN.md"
keywords = ["dns", "rustdns", "pipeline", "flow", "dns-server"]
categories = ["network-programming"]


[dependencies]
# Core async runtime and shared infrastructure
async-trait = "0.1"
futures = "0.3.31"
socket2 = "0.6.4"
tokio = { version = "1", features = ["full", "test-util"] }
tokio-util = { version = "0.7.18", features = ["rt"] }

# Configuration, CLI, and observability
jiff = "0.2"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10.0"
thiserror = "2.0"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sysinfo = { version = "0.38", default-features = false, features = ["system"] }

# Core data structures and utility crates
ahash = "0.8.12"
arc-swap = "1.9.1"
bytes = "1.11"
crossbeam-queue = "0.3.12"
dashmap = "6"
inventory = "0.3"
lazy_static = "1.5"
libc = "0.2"
rand = "0.10.1"
url = "2.5"
fs2 = "0.4"
hex = "0.4"
semver = "1.0"
sha2 = "0.11.0"
flate2 = "1.1"
tar = "0.4"
wincode = { version = "0.5", features = ["derive"] }
oxidns-proto = { version = "0.1.1", path = "crates/proto" }
oxidns-macros = { version = "0.1.0", path = "crates/macros" }
hotpath = "0.16"

# DNS transport and TLS stack used by server plugins and upstream clients
h2 = "0.4"
h3 = "0.0.8"
h3-quinn = "0.0.10"
quinn = "0.11.9"
rustls = { version = "0.23.40", features = ["ring"] }
rustls-pemfile = "2.2.0"
tokio-rustls = "0.26.4"
webpki-roots = "1.0.2"

# HTTP stack for DoH server/client paths and the download executor
base64 = "0.22"
http = "1.4"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["server", "client", "http1", "http2"] }
hyper-rustls = { version = "0.27.8", features = ["http1", "http2", "ring", "webpki-tokio"] }
hyper-util = { version = "0.1.20", features = ["server", "client", "client-legacy", "http1", "http2", "tokio"] }
tower-service = "0.3"

# Matcher and provider plugin dependencies
aho-corasick = "1.1.4"
prost = "0.14"
regex = "1.12.2"

# Executor plugin dependencies
cronexpr = "1.5.0"
fast-socks5 = "1.0.0"
mikrotik-rs = "0.8.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }

# Service management
service-manager = "0.11.0"
zoneparser = { package = "oxidns-zoneparser", version = "0.1.0", path = "crates/zoneparser" }

[target.'cfg(target_os = "linux")'.dependencies]
ripset = { package = "oxidns-ripset", version = "0.1.2", path = "crates/ripset" }

[target.'cfg(windows)'.dependencies]
zip = "8"
windows-service = "0.6"


[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]

[dev-dependencies]
criterion = "0.8.2"
tempfile = "3.23.0"

[[bench]]
name = "message_codec"
harness = false

[[bench]]
name = "plugin_local_answers"
harness = false

[[bench]]
name = "domain_rule_matcher"
harness = false

[[bench]]
name = "ip_rule_matcher"
harness = false


[[bin]]
name = "oxidns"
path = "src/main.rs"

[lib]
name = "oxidns"
path = "src/lib.rs"
doctest = false


[package.metadata.deb]
maintainer = "Sven Shi <isvenshi@gmail.com>"
copyright = "2026, Sven Shi"
depends = "$auto"
section = "net"
priority = "optional"
license-file = ["LICENSE", "0"]
extended-description = """\
A Rust-powered DNS engine inspired by MosDNS, designed for performance and complete configurability.
"""
assets = [
    ["target/release/oxidns", "usr/bin/oxidns", "755"],
    ["config.yaml", "etc/oxidns/config.yaml", "644"],
    ["webui/out/**/*", "usr/share/oxidns/webui", "644"],
]
maintainer-scripts = "packaging/debian"

[package.metadata.deb.systemd-units]
enable = true
unit-scripts = "packaging"
