[package]
name = "oxidns-proto"
version = "0.1.3"
edition = "2024"
authors = ["Sven Shi <isvenshi@gmail.com>"]
description = "DNS message model and wire codec primitives used by OxiDNS"
license = "GPL-3.0-or-later"
repository = "https://github.com/svenshi/oxidns"
readme = "README.md"
keywords = ["dns", "protocol", "codec", "wire"]
categories = ["network-programming", "parser-implementations"]

[lib]
name = "oxidns_proto"
path = "src/lib.rs"
doctest = false

[dependencies]
ahash = "0.8.12"
hotpath = "0.18"
smallvec = "1.15.1"
thiserror = "2.0"

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
