[package]
name = "oxidns-zoneparser"
version = "0.1.1"
edition = "2024"
authors = ["Sven Shi <isvenshi@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "Vendored zonefile parser adapted for OxiDNS"
repository = "https://github.com/svenshi/oxidns"
keywords = ["dns", "zonefile", "parser"]
categories = ["parser-implementations", "network-programming"]

[dependencies]
oxidns-proto = { version = "0.1", path = "../proto" }
thiserror = "2.0"

[lib]
name = "zoneparser"
path = "src/lib.rs"
doctest = false
